# UTP-Task03-JNI

lib/: .clang-format  CMakeLists.txt
src/main/: Main.java
src/test/: ChunkTest.java  PalindromeTest.java  WithoutDuplicatesTest.java
